# game-of-life.rs

./: .gitignore  LICENSE  README.md
amethyst/: Cargo.toml  README.md
amethyst-pong/: Cargo.toml
amethyst-pong/config/: display.ron
amethyst-pong/src/: audio.rs  main.rs
amethyst-pong/src/systems/: paddle.rs  winner.rs
amethyst/config/: display-pong.ron
amethyst/src/: components.rs  main.rs  pong.rs
amethyst/src/systems/: bounce.rs  mod.rs  move_balls.rs  paddle.rs  winner.rs
