[package]
name = "amethyst-pong"
version = "0.1.0"
authors = ["klangner <klangner@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = {version = "0.15", features = ["no-slow-safety-checks"]}
log = { version = "0.4.8", features = ["serde"] }

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]